--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,15 @@
 }
 
 h2{
+    font-size: 50px;
+    background-color: rgb(196, 183, 209);
+    color: rgb(20, 1, 16);
     text-align: center;
-    color: chocolate;
+    height: 100px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-top: 20px;
+    border: ridge;
 }
 body{
     background-color: beige;
@@ -17,15 +24,44 @@ img{
     display: inline-block;
     width: 25%;
     height: 300px;
+    background-color: darkgray;
+    border: dotted;
+    margin-left: 5%;;
 }
-ul{
-    width: 80%;
-    background-color: cornsilk;
+#unList{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    font-size: 20px;
+    color : rgb(25, 29, 26);
+    text-align: justify;
+    margin-left: 10px ;
+    border: inset;
+    background-color: rgb(236, 243, 177);
 }
 
 li{
     font-size: 30px;
     font-weight: bold;
     list-style: none;
-    color: cornflowerblue;
+    color: rgb(20, 27, 18);
+    border: darkcyan , 10px;
+    margin: 10px;
+    padding-left: 20px;
+
+}
+#btn {
+    width: 150px;
+    height: 70px;
+    text-align: center;
+    color: rgb(57, 63, 44);
+    background-color: rgb(183, 196, 153);
+    font-size: 25px;
+    margin-left: 800px;
+    margin-top: 100px;
+}
+#myChart{
+    border: double;
 }
